--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+#root {
+    width: 100%;
+    min-height: 100vh;
+}
 body {
     background-color: #333;
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
-    cursor: pointer;
 }
 pre {
     background: #eee;
